[package]
name = "plist_plus"
version = "0.3.0"
edition = "2021"
authors = ["Jackson Coxson"]
description = "A library for reading and writing plists, compatible with libimobiledevice"
homepage = "https://github.com/jkcoxson/plist_plus"
repository = "https://github.com/jkcoxson/plist_plus"
license = "LGPL-2.1-or-later"
keywords = [
  "plist",
  "plist_plus",
  "libimobiledevice",
  "libplist",
  "libplist_plus",
]
readme = "README.md"
documentation = "https://docs.rs/plist_plus"
exclude = ["/tests"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71.1"
autotools = "0.2"

[features]
default = ["clean_debug"]
pls-generate = []
vendored = []
# Enables clean debug behavior that prints the actual inner values
clean_debug = []
