[package]
name = "plist_plus2"
version = "0.1.0"
edition = "2021"
authors = ["Michael Wright", "Jackson Coxson"]
description = "A library for reading and writing plists, compatible with libimobiledevice"
homepage = "https://github.com/michaelwright235/plist_plus2"
repository = "https://github.com/michaelwright235/plist_plus2"
license = "LGPL-2.1-or-later"
keywords = [
  "plist",
  "plist_plus",
  "libimobiledevice",
  "libplist",
  "libplist_plus",
]
readme = "README.md"
documentation = "https://docs.rs/plist_plus2"
exclude = ["/tests"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71.1"
autotools = "0.2"

[features]
default = ["clean_debug"]
pls-generate = []
vendored = []
# Enables clean debug behavior that prints the actual inner values
clean_debug = []
